--- a/Proyectos_personales/loginjavafx/nbproject/project.properties
+++ b/Proyectos_personales/loginjavafx/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/loginjavafx
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.1.0.jar=lib/mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.javafx20.classpath}
+    ${libs.javafx20.classpath}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
