--- a/Proyectos_personales/Aplicacion_Inicio_Sesion/nbproject/project.properties
+++ b/Proyectos_personales/Aplicacion_Inicio_Sesion/nbproject/project.properties
@@ -33,13 +33,15 @@ dist.jar=${dist.dir}/Aplicacion_Inicio_Sesion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.1.0.jar=lib\\mysql-connector-j-8.1.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.javafx20.classpath}
+    ${libs.javafx20.classpath}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
