--- a/Proyectos_personales/Aplicacion_Inicio_Sesion/nbproject/project.properties
+++ b/Proyectos_personales/Aplicacion_Inicio_Sesion/nbproject/project.properties
@@ -40,8 +40,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.javafx20.classpath}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${libs.javafx20.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
